<resources>

    <string name="action_settings">sobre</string>
    <string name="sobreIntroTV">Aplicativo desenvolvido como requisito da disciplina: Tópicos Avançados em Linguagem de Programação </string>
    <string name="InfoSobreTV">Informações</string>
    <string name="nomeFaculdadeTV">Faculdade Católica do Tocantins</string>
    <string name="siteFaculdadeTV">Instituição, www.catolica-to.edu.br</string>
    <string name="nomeCursoTV">Sistemas de Informação</string>
    <string name="faceCursoTV">Curso, www.facebook.com/siCatolicaTocantins</string>
    <string name="nomeDesenvolvedorTV">Sidney Silva Costa</string>
    <string name="emailDesenvolvedorTV">Desenvolvedor, sidneycosta156@gmail.com</string>
    <string name="nomeProfessorTV">Silvano Malfatti</string>
    <string name="emailProfessorTV">Professor, silvanomalfatti@gmail.com</string>

    <string name="app_name">MeuProjeto</string>
    <string name="botao">Ver meu signo</string>
    <string name="voltar">Voltar</string>
    <string name="dia">Dia</string>
    <string name="mes">Mês</string>


    <string-array name="dias">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string-array name="meses">
        <item>Janeiro</item>
        <item>Fevereiro</item>
        <item>Março</item>
        <item>Abril</item>
        <item>Maio</item>
        <item>Junho</item>
        <item>Julho</item>
        <item>Agosto</item>
        <item>Setembro</item>
        <item>Outubro</item>
        <item>Novembro</item>
        <item>Dezembro</item>
    </string-array>

</resources>

