<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sidneycosta156gmail.meuprojeto.MainActivity">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/signos"
        android:layout_above="@+id/spinnerDia"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="36dp" />

    <TextView
        android:id="@+id/textDia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="228dp"
        android:text="@string/dia" />

    <Spinner
        android:id="@+id/spinnerDia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:layout_alignTop="@+id/textDia"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textMes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:text="@string/mes"
        android:layout_below="@+id/spinnerDia"
        android:layout_alignParentStart="true" />

    <Spinner
        android:id="@+id/spinnerMes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textMes"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/buttonEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botao"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp" />

</RelativeLayout>
